--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "postcss": "^8.5.4",
+        "tailwindcss": "^3.4.17",
         "vite": "^4.0.0"
     }
 }
