--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "postcss": "^8.5.4",
         "tailwindcss": "^3.4.17",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@headlessui/react": "^2.2.4"
     }
 }
